<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2017 Julia Kozhukhovskaya
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>

    <string name="app_name">WordChunks</string>

    <string name="settings_hint">SETTINGS</string>
    <string name="back_hint">back</string>

    <string name="title_select_pack">SELECT PACK</string>

    <string name="title_select_level">SELECT LEVEL</string>
    <string name="number_of_letters">%d LETTERS</string>
    <string name="number_of_levels_locked">%d LEVELS</string>
    <string name="number_of_levels">%1$d/%2$d  LEVELS</string>
    <string name="level_num">LEVEL %d</string>
    <string name="list_number" translatable="false">%1$d. %2$s</string>
    <string name="level_title">LEVEL %d</string>
    <string name="solutions">SOLUTIONS</string>
    <string name="clear">clear</string>
    <string name="shuffle">shuffle</string>
    <string name="hint">hint</string>
    <string name="level_finished">LEVEL FINISHED</string>
    <string name="next_level">NEXT LEVEL</string>
    <string name="fun_fact">FUN FACT</string>
    <string name="we_will_add_new_packs_soon">WE WILL ADD NEW PACKS SOON!</string>
    <string name="it_means_so_much_for_us">IT MEANS SO MUCH FOR US</string>
    <string name="rate_us">RATE US!</string>
    <string name="level_already_completed">LEVEL ALREADY COMPLETED</string>
    <string name="back_to_levels">BACK TO LEVELS</string>
    <string name="how_to_play">HOW TO PLAY?</string>
    <string name="tutorial3">3. Turn to TOOLS when stuck.</string>
    <string name="tutorial2">2. Click letter group AGAIN to UNDO the selected letters.</string>
    <string name="tutorial0">Answers register AUTOMATICALLY when correct.</string>
    <string name="tutorial1">1. All given solutions has one THEME in common.</string>
    <string name="tutorial">tutorial</string>
    <string name="all_packs_finished">ALL PACKS FINISHED</string>
    <string name="show_a_hint_for">SHOW A HINT FOR</string>
    <string name="full_solution">FULL WORD</string>
    <string name="congratulations">CONGRATULATIONS!</string>
    <string name="first_letter">FIRST LETTER</string>
    <string name="first_chunk">FIRST CHUNK</string>
    <string name="first_and_dots" translatable="false">%s…</string>
    <string name="you_finished_the_whole_pack">YOU\'VE FINISHED THE WHOLE PACK!</string>
    <string name="only_one_level_left">ONLY ONE LEVEL LEFT IN PACK</string>
    <string name="you_finished_all_packs">YOU\'VE FINISHED ALL PACKS AND LEVELS</string>
    <string name="num_levels_left">%d LEVELS LEFT IN PACK</string>
    <string name="send_feedback">SEND FEEDBACK</string>
    <string name="rate_the_app">RATE THE APP!</string>
    <string name="show_the">SHOW THE…</string>
    <string name="sherlock_holmes">SHERLOCK HOLMES</string>
    <string name="hint_amp_shuffle"><![CDATA[HINT & SHUFFLE]]></string>
    <string name="language">LANGUAGE:</string>
    <string name="version">ver. %s</string>
    <string name="number_of_letters_ru">%d БУКВ</string>

    <string name="circle" translatable="false">
        M527.023,71.8233 C780.213,71.8233,985.464,277.075,985.464,530.265
        C985.464,783.455,780.213,988.707,527.023,988.707
        C273.832,988.707,68.5809,783.455,68.5809,530.265
        C68.5809,277.075,273.832,71.8233,527.023,71.8233 Z
    </string>

    <string name="authentication">PROFILE:</string>
    <string name="guest">GUEST</string>
    <string name="google" translatable="false">GOOGLE</string>
    <string name="dots" translatable="false">…</string>

    <!-- START Main Screen -->
    <!-- START Main Title -->
    <string name="share_hint">share</string>
    <string name="share_text" translatable="false">
        WordChunks is AWESOME and I think you\'ll love it. Get it! --\n
        https://play.google.com/store/apps/details?id=com.appchamp.wordchunks
    </string>
    <string name="titlebar_main">WORD CHUNKS</string>
    <string name="share_subject" translatable="false">My current puzzle</string>
    <!-- END Main Title -->
    <!-- START Main Buttons titles -->
    <string name="play_btn_txt">PLAY!</string>
    <string name="daily_puzzle_btn_txt">DAILY PUZZLE</string>
    <string name="all_packs_btn_txt">ALL PACKS</string>
    <string name="store_btn_txt">STORE</string>
    <!-- END Main Buttons titles -->
    <string name="complete">COMPLETE</string>
    <string name="changelog">CHANGELOG</string>
    <string name="ok" translatable="false">OK</string>
    <string name="changelog_message" translatable="false">
        [1.3.beta] - 7/17/2017\n\n
        ADDED:\n
        - New anonymous authentication.\n
        - Now you can save your game progress by signing up via Google.\n
        - New animations.\n
        - New Changelog section.\n\n

        CHANGED:\n
        - Fix phrasing and spelling in Russian translation.
    </string>
    <!-- Main Screen END -->

    <!-- Settings Screen START -->
    <string name="russian" translatable="false">РУССКИЙ</string>
    <string name="english" translatable="false">ENGLISH</string>
    <!-- START Change Language Dialog Warning -->
    <string name="warning">WARNING</string>
    <string name="dialog_message_lang_change">Your current game progress will be lost, to save it you have to sign in first.</string>
    <string name="change">CHANGE</string>
    <string name="cancel">@android:string/cancel</string>
    <!-- END Change Language Dialog Warning -->
    <string name="facebook_coming">Facebook Sign In Will Be Soon</string>
    <string name="twitter_coming">Twitter Sign In Will Be Soon</string>
    <string name="saved_changelog_state" translatable="false">saved_changelog_state</string>
    <string name="feedback_email" translatable="false">jkozhukhovskaya@gmail.com</string>
    <string name="feedback_subject" translatable="false">Feedback for WordChunks</string>
    <string name="feedback_text" translatable="false">
        -----------------\n
        ID: %1$s\n
        DebugApp version: %2$d\n
        Device: %3$s\n
        System version: %4$s\n
        -----------------\n\n
    </string>
    <!-- END Settings Screen -->
</resources>
