<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:paddingEnd="@dimen/toolbar_padding"
        android:paddingStart="@dimen/toolbar_padding">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/tutorial"
            android:src="@drawable/ic_info" />

        <TextView
            fontPath="fonts/nunitoextrabold.ttf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/how_to_play"
            android:textColor="@color/title_txt"
            android:textSize="@dimen/toolbar_title_txt_size"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:id="@+id/imgClose"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/back_hint"
            android:src="@drawable/ic_close" />

    </RelativeLayout>

    <TextView
        fontPath="fonts/nunitoextrabold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/tutorial1"
        android:textAlignment="center"
        android:textColor="#e2e2e2"
        android:textSize="16sp"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/nunitoextrabold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingBottom="5dp"
        android:text="SHERLOCK HOLMES"
        android:textColor="@color/title_txt"
        android:textSize="@dimen/toolbar_title_txt_size"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/nunitoextrabold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:letterSpacing="0.2"
        android:paddingBottom="10dp"
        android:text="@string/solutions"
        android:textColor="#4d6c96"
        android:textSize="9sp"
        tools:ignore="MissingPrefix" />

    <pl.droidsonroids.gif.GifImageView
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:src="@drawable/tutorial1" />

    <TextView
        fontPath="fonts/nunitoextrabold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/tutorial0"
        android:textAlignment="center"
        android:textColor="#e2e2e2"
        android:textSize="14sp"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/nunitoextrabold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/tutorial2"
        android:textAlignment="center"
        android:textColor="#e2e2e2"
        android:textSize="16sp"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/nunitoextrabold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:paddingEnd="16dp"
        android:paddingStart="16dp"
        android:text="@string/tutorial3"
        android:textAlignment="center"
        android:textColor="#e2e2e2"
        android:textSize="16sp"
        tools:ignore="MissingPrefix" />

    <TextView
        fontPath="fonts/nunitoextrabold.ttf"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="HINT   &amp;   SHUFFLE"
        android:textAlignment="center"
        android:textColor="#e2e2e2"
        android:textSize="14sp"
        tools:ignore="MissingPrefix" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:paddingEnd="10dp"
        android:paddingStart="10dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shuffle_hint_rect"
            android:contentDescription="@string/hint"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:src="@drawable/ic_hint" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/shuffle_hint_rect"
            android:contentDescription="@string/shuffle"
            android:paddingBottom="4dp"
            android:paddingEnd="8dp"
            android:paddingStart="8dp"
            android:src="@drawable/ic_shuffle" />

    </LinearLayout>

</LinearLayout>