<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Julia Kozhukhovskaya
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageView
            android:id="@+id/imgSettingsIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/settings_hint"
            android:paddingEnd="@dimen/toolbar_padding"
            android:paddingStart="@dimen/toolbar_padding"
            android:src="@drawable/ic_action_settings" />

        <ImageView
            android:id="@+id/imgShareIcon"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/share_hint"
            android:paddingEnd="@dimen/toolbar_padding"
            android:paddingStart="@dimen/toolbar_padding"
            android:src="@drawable/ic_share_white_24dp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="2"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical">

        <com.appchamp.wordchunks.ui.customviews.CustomButton
            android:id="@+id/btnPlay"
            style="@style/CustomButtonStyle"
            app:cb_bg="@drawable/btn_play_rect"
            app:cb_color_title="@color/play_txt_color"
            app:cb_icon="@drawable/ic_play"
            app:cb_title="@string/play_btn_txt" />

        <com.appchamp.wordchunks.ui.customviews.CustomButton
            android:id="@+id/btnDaily"
            style="@style/CustomButtonStyle"
            app:cb_bg="@drawable/btn_daily_rect"
            app:cb_color_title="@color/daily_txt_color"
            app:cb_icon="@drawable/ic_puzzle"
            app:cb_title="@string/daily_puzzle_btn_txt" />

        <com.appchamp.wordchunks.ui.customviews.CustomButton
            android:id="@+id/btnPacks"
            style="@style/CustomButtonStyle"
            app:cb_bg="@drawable/btn_packs_rect"
            app:cb_color_title="@color/packs_txt_color"
            app:cb_icon="@drawable/ic_packs"
            app:cb_title="@string/all_packs_btn_txt" />

        <com.appchamp.wordchunks.ui.customviews.CustomButton
            android:id="@+id/btnStore"
            style="@style/CustomButtonStyle"
            app:cb_bg="@drawable/btn_store_rect"
            app:cb_color_title="@color/store_txt_color"
            app:cb_icon="@drawable/ic_store"
            app:cb_title="@string/store_btn_txt" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/rl_padding_start"
        android:paddingStart="@dimen/rl_padding_start">

        <ImageView
            android:id="@+id/imgCat"
            android:layout_width="@dimen/cat_img_width"
            android:layout_height="wrap_content"
            android:contentDescription="@string/sleeping_cat"
            android:src="@drawable/cat_sleep" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="@dimen/zzz1_img_width"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgCat"
            android:layout_toRightOf="@+id/imgCat"
            android:paddingBottom="@dimen/zzz1_padding_bottom"
            android:src="@drawable/zzz" />

        <pl.droidsonroids.gif.GifImageView
            android:layout_width="@dimen/zzz2_img_width"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/imgCat"
            android:layout_toRightOf="@+id/imgCat"
            android:paddingBottom="@dimen/zzz2_padding_bottom"
            android:src="@drawable/zzz" />

    </RelativeLayout>

</LinearLayout>