<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_game_finish"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <TextView
            fontPath="fonts/nunitoextrabold.ttf"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/all_packs_finished"
            android:textColor="#f2f2f2"
            android:textSize="@dimen/toolbar_title_txt_size" />

        <ImageView
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:src="@drawable/ic_medal" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginTop="-50dp"
            android:src="@drawable/finish" />

        <RelativeLayout
            android:id="@+id/rlRateUs"
            android:layout_width="260dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_bg_rect"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/imgRectBg"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/next_level_left_rect" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingEnd="17dp">

                <TextView
                    android:id="@+id/tvNextLevelTitle"
                    fontPath="fonts/nunitoextrabold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rate_us"
                    android:textColor="#f1c40f"
                    android:textSize="18sp"
                    tools:ignore="MissingPrefix" />

                <TextView
                    android:id="@+id/tvNextLevelClue"
                    fontPath="fonts/nunitosemibold.ttf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:text="@string/it_means_so_much_for_us"
                    android:textColor="#b5b5b5"
                    android:textSize="10sp"
                    tools:ignore="MissingPrefix" />

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/next_level"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_rate" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:gravity="center">

        <TextView
            android:id="@+id/tvLevelsLeft"
            fontPath="fonts/nunitobold.ttf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/we_will_add_new_packs_soon"
            android:textColor="#ffffff"
            android:textSize="12sp"
            tools:ignore="MissingPrefix" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/top"
            android:contentDescription="@null"
            android:rotation="180" />

    </RelativeLayout>

</LinearLayout>