<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Julia Kozhukhovskaya
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_game_finish"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/main_shadow"
            android:contentDescription="@null" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fontFamily="@font/nunitoextrabold"
            android:gravity="center"
            android:text="@string/all_packs_finished"
            android:textColor="#f2f2f2"
            android:textSize="@dimen/toolbar_title_txt_size" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="340dp"
            android:layout_marginTop="-50dp"
            android:contentDescription="@null"
            android:src="@drawable/finish" />

        <RelativeLayout
            android:id="@+id/rlRateUs"
            android:layout_width="260dp"
            android:layout_height="54dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/main_bg_rect"
            android:foreground="?android:attr/selectableItemBackground"
            android:paddingBottom="4dp">

            <ImageView
                android:id="@+id/imgRectBg"
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@null"
                android:scaleType="fitXY"
                android:src="@drawable/finish_left_rect" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:gravity="end"
                android:orientation="vertical"
                android:paddingBottom="4dp"
                android:paddingEnd="17dp"
                android:paddingRight="17dp">

                <TextView
                    android:id="@+id/tvNextLevelTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nunitoextrabold"
                    android:text="@string/rate_us"
                    android:textColor="#b388ff"
                    android:textSize="18dp" />

                <TextView
                    android:id="@+id/tvNextLevelClue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="-4dp"
                    android:fontFamily="@font/nunitosemibold"
                    android:text="@string/it_means_so_much_for_us"
                    android:textColor="#b5b5b5"
                    android:textSize="10dp" />

            </LinearLayout>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/next_level"
                android:padding="10dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_rate" />

        </RelativeLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-40dp"
        android:gravity="center">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@drawable/main_shadow"
            android:contentDescription="@null"
            android:rotation="180" />

        <TextView
            android:id="@+id/tvLevelsLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:drawablePadding="10dp"
            android:fontFamily="@font/nunitobold"
            android:gravity="center_vertical"
            android:padding="10dp"
            android:text="@string/we_will_add_new_packs_soon"
            android:textColor="#ffffff"
            android:textSize="12dp" />

    </RelativeLayout>

</LinearLayout>