<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="MissingPrefix">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/level_finish_screen_bg"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height">

            <TextView
                fontPath="fonts/nunitoextrabold.ttf"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/level_already_completed"
                android:textColor="@color/title_txt"
                android:textSize="@dimen/toolbar_title_txt_size" />

            <ImageView
                android:layout_width="70dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:src="@drawable/web" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/cat_clean" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/llPackBg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:background="#00bdbd">

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:background="#70000000" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:contentDescription="@null"
                android:paddingEnd="20dp"
                android:paddingStart="20dp"
                android:src="@drawable/ribbon" />

            <TextView
                android:id="@+id/tvExcellent"
                fontPath="fonts/nunitoblack.ttf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:paddingBottom="4dp"
                android:textColor="#263238"
                android:textSize="20sp"
                tools:text="EXCELLENT!" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvFunFactTitle"
            fontPath="fonts/nunitoextrabold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#70000000"
            android:gravity="center"
            android:letterSpacing="0.2"
            android:paddingBottom="4dp"
            android:paddingTop="4dp"
            android:text="@string/fun_fact"
            android:textSize="12sp"
            tools:textColor="#00bdbd" />

        <TextView
            android:id="@+id/tvFunFact"
            fontPath="fonts/nunitosemibold.ttf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#2d2d2d"
            android:paddingBottom="10dp"
            android:paddingEnd="50dp"
            android:paddingStart="50dp"
            android:paddingTop="10dp"
            android:textColor="#e3e4e4"
            android:textSize="14sp"
            tools:text="The sentence “The quick brown fox jumps over a lazy dog.” uses every letter of the alphabet." />

        <View
            android:layout_width="match_parent"
            android:layout_height="6dp"
            android:layout_marginBottom="50dp"
            android:background="#70000000" />

        <android.support.v7.widget.CardView
            android:id="@+id/cvBackToLevels"
            android:layout_width="220dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardBackgroundColor="#2d2d2d"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:src="@drawable/back_to_levels_left_rect" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:contentDescription="@string/next_level"
                android:scaleType="centerInside"
                android:src="@drawable/ic_action_back" />

            <TextView
                fontPath="fonts/nunitoextrabold.ttf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:paddingEnd="15dp"
                android:text="@string/back_to_levels"
                android:textColor="#f7f7f7"
                android:textSize="16sp" />

        </android.support.v7.widget.CardView>

    </LinearLayout>

</LinearLayout>